[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Music/Kevin MacLeod/Equatorial Complex/Equatorial Complex.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/SquadaOne/SquadaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Scripts/GameOverCamera.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scripts/GameOver.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/GUI/button.png" type="Texture" id=6]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="Environment" id=2]
background_mode = 1
background_color = Color( 0.905882, 0.905882, 0.905882, 1 )
ambient_light_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFont" id=7]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 3 )

[node name="GameOver" type="Spatial"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.31134e-07, 0, -3, 0, 3, 0, 3, 0, -1.31134e-07, 0, 1.2, -16 )

[node name="Background2" parent="." instance=ExtResource( 2 )]
transform = Transform( 2.13946, 0, -2.10303, 0, 3, 0, 2.10303, 0, 2.13946, -302.281, 0.1, 153.101 )

[node name="Plane" type="CSGBox" parent="."]
transform = Transform( 1000, 0, 0, 0, 0.1, 0, 0, 0, 300, 0, 0, 0 )
use_collision = true
material = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 40, 100 )
current = true
far = 1800.0
script = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="WindowDialog" type="ColorRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -303.0
margin_top = -165.0
margin_right = 98.0
margin_bottom = 58.0
rect_scale = Vector2( 1.5, 1.5 )
theme = SubResource( 3 )
color = Color( 0.25098, 0.533333, 0.694118, 1 )

[node name="GameOverLabel" type="Label" parent="Control/WindowDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.5
margin_top = 14.6667
margin_right = 140.5
margin_bottom = 78.6667
theme = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Game over!"
align = 1

[node name="ScoreLabel" type="Label" parent="Control/WindowDialog"]
anchor_left = 0.516
anchor_top = 0.5
anchor_right = 0.516
anchor_bottom = 0.5
margin_left = -99.5827
margin_top = -22.1667
margin_right = 100.417
margin_bottom = 20.8333
theme = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "Score: 1234"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/WindowDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -69.6665
margin_right = 166.0
margin_bottom = -18.6664

[node name="StopButton" type="TextureButton" parent="Control/WindowDialog/HBoxContainer"]
margin_right = 164.0
margin_bottom = 51.0
texture_normal = ExtResource( 6 )
stretch_mode = 3

[node name="Text" type="Label" parent="Control/WindowDialog/HBoxContainer/StopButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = -19.5
margin_right = 59.5
margin_bottom = 19.5
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Stop"
align = 1

[node name="RestartButton" type="TextureButton" parent="Control/WindowDialog/HBoxContainer"]
margin_left = 168.0
margin_right = 332.0
margin_bottom = 51.0
texture_normal = ExtResource( 6 )
stretch_mode = 3

[node name="Text" type="Label" parent="Control/WindowDialog/HBoxContainer/RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = -19.5
margin_right = 59.5
margin_bottom = 19.5
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Restart"
align = 1

[connection signal="pressed" from="Control/WindowDialog/HBoxContainer/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="Control/WindowDialog/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
